--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
         <input id="submit" type="submit" />
     </form>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div id="coffees"></div>
+            </div>
+        </div>
+    </div>
 
     <script src="main.js"></script>
 </body>
